# hackathon-claude-code

./: .gitignore  README.md  SECURITY.md  USAGE.md  [example]samconfig.toml  process-notes.md  template.yaml
docs/: checklist.md  learner-profile.md  prd.md  scope.md  spec.md
events/: embed-request.json  s3-object-created-movies.json  s3-object-created-papers.json  search-request-invalid-index.json  search-request-no-filter.json  search-request.json
events/test-data/: back_to_the_future.txt
files/: chunk_example.rs  use_voyage.rs
frontend/: index.html
frontend/search/: index.html  package-lock.json  package.json
frontend/search/src/: App.vue  style.css
frontend/search/src/components/: AppFooter.vue  SearchForm.vue  ThemeToggle.vue
frontend/search/src/composables/: useSearch.js  useTheme.js
frontend/src/: App.vue  config.js
frontend/src/components/: AppHeader.vue  SearchForm.vue  SearchResult.vue
frontend/src/composables/: useSearch.js  useTheme.js
frontend/upload/: index.html  package-lock.json  package.json  vite.config.js
frontend/upload/src/: App.vue  config.js  style.css
frontend/upload/src/components/: AppFooter.vue  AppHeader.vue  UploadForm.vue  UploadResult.vue
frontend/upload/src/composables/: useTheme.js  useUpload.js
lambdas/check-s3-vectors/: check_s3_vectors.py  pyproject.toml  requirements.txt
lambdas/embed-s3-vectors/: Cargo.toml  Makefile
lambdas/embed-s3-vectors/src/: main.rs
lambdas/search-s3-vectors/: Cargo.toml  Makefile
lambdas/search-s3-vectors/src/: http_handler.rs  main.rs
lambdas/search-worker/: Cargo.toml  Makefile
lambdas/search-worker/src/: main.rs
lambdas/upload-s3/: Cargo.toml  Makefile
lambdas/upload-s3/src/: main.rs
scripts/: test-etapa1.sh  test-etapa2.sh
