[package]
name = "embed-s3-vectors"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3vectors = "1.23.0"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
mongodb-voyageai = "0.1.2"
lambda_runtime = "0.13"
aws_lambda_events = "0.15"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
