[package]
name = "search-s3-vectors"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3vectors = "1.23.0"
aws-sdk-secretsmanager = "1"
mongodb-voyageai = "0.1.2"
reqwest = { version = "0.13.2", features = ["json", "native-tls"] }
lambda_http = "1.0.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
tokio = { version = "1", features = ["macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
